implemented logic to highlight imported storages and to check/edit their client assignment

--- a/views/scripts/storage/searchfield.phtml
+++ b/views/scripts/storage/searchfield.phtml
@@ -304,7 +304,8 @@
          *
          * @param {type} self
          * @param {type} data
-         * @returns {undefined}         */
+         * @returns {undefined}
+         */
         function render(self, data) {
             $(self.options.target).html(data);
             
