--- a/views/scripts/storage/indexadmin.ajax.phtml
+++ b/views/scripts/storage/indexadmin.ajax.phtml
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-    <div class="span12" id="jsNewsPagerContainer">
+    <div class="span12">
         <div class="row-fluid cssListing">
             <div class="span12 cssHeaderList">
                 <div class="cssButton span12">
@@ -12,7 +12,7 @@
         
         <?= $this->render('storage/pager.phtml') ?>
 
-        <div id="newsListing" class="row-fluid cssListing">
+        <div class="row-fluid cssListing">
             <ul class="span12 unstyled">
                 <? foreach($this->html('pager/data') as $id => $storage) :?>
                 <li class="row-fluid">
