added german localization

--- a/views/scripts/storage/add.phtml
+++ b/views/scripts/storage/add.phtml
@@ -2,7 +2,7 @@
     <div class="span12">
         <div class="row-fluid ">
             <div class="cssUserImage span2">
-                <img name="avatar" src="<?= $this->baseUrl() ?>/img/dummy_domain_200.png" alt="<?= $this->translate('avatar') ?>">
+                <img name="avatar" src="<?= $this->baseUrl() ?>/img/dummy_domain_200.png" alt="<?= $this->translate('Avatar') ?>">
             </div>
             <form id="formStorage" class="span10" method="post" 
                   action="<?= $this->url(array(), 'mazelab-storage_add') ?>" >
