--- a/views/scripts/storage/indexadmin.ajax.phtml
+++ b/views/scripts/storage/indexadmin.ajax.phtml
@@ -4,7 +4,7 @@
             <div class="span12 cssHeaderList">
                 <div class="cssButton span12">
                     <a class="btn btn-info jsButton" href="<?= $this->url(array(), 'mazelab-storage_add') ?>">
-                        <?= $this->translate("New Storage") ?>
+                        <?= $this->translate("New storage") ?>
                     </a>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                         cssStatusPending
                     <? endif; ?>">
                         <span class="cssListItem span12">
-                            <a  title="<?= $this->translate("detail") ?>"
+                            <a  title="<?= $this->translate("Detail") ?>"
                                 href="<?= $this->url(array($id), 'mazelab-storage_edit') ?>">
                                 <span>
                                     <?= $storage->html('name') ?>
