--- a/views/scripts/storage/searchfield.phtml
+++ b/views/scripts/storage/searchfield.phtml
@@ -23,7 +23,7 @@
                 <?= $this->html('pager/lastPosition') ?>
             </span>
             <span>
-                <?= $this->translate("from"); ?>
+                <?= $this->translate("of"); ?>
             </span>
             <span class="jsPagerTotal">
                 <?= $this->html('pager/total') ?>
@@ -33,12 +33,12 @@
             <ul class="cssQtipPager">
                 <li>
                     <a class="jsPagerButton jsPagerFirst">
-                        <?= $this->translate("to Start"); ?>
+                        <?= $this->translate("to start"); ?>
                     </a>
                 </li>
                 <li>
                     <a class="jsPagerButton jsPagerLast">
-                        <?= $this->translate("to End"); ?>
+                        <?= $this->translate("to end"); ?>
                     </a>
                 </li>
             </ul>
