--- a/views/scripts/storage/indexclient.phtml
+++ b/views/scripts/storage/indexclient.phtml
@@ -1,6 +1,6 @@
 <div class="cssContentMiddle grid_16">
     <h1 class="grid_16">
-        <?= $this->translate('All Storages client %1$s', $this->html("identity/label")); ?>
+        <?= $this->translate('All Storages of client %1$s', $this->html("identity/label")); ?>
     </h1>
     
     <?= $this->render('storage/searchfield.phtml') ?>
@@ -8,7 +8,7 @@
     <div class="cssListing grid_16">
         <div class="grid_16 alpha omega cssHeaderList">
             <div class="grid_16 alpha omega cssAction">
-                <h3><?= $this->translate('actions') ?></h3>
+                <h3><?= $this->translate('Actions') ?></h3>
             </div>
         </div>
         
