--- a/views/scripts/storage/pager.phtml
+++ b/views/scripts/storage/pager.phtml
@@ -37,8 +37,8 @@
                 </a>
                 <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
                     <li>
-                        <a href="#" id="pagerFirst" class="jsPagerFirst"><?= $this->translate("to Start"); ?></a>
-                        <a href="#" id="pagerLast" class="jsPagerLast"><?= $this->translate("to End"); ?></a>
+                        <a href="#" id="pagerFirst" class="jsPagerFirst"><?= $this->translate("to start"); ?></a>
+                        <a href="#" id="pagerLast" class="jsPagerLast"><?= $this->translate("to end"); ?></a>
                     </li>
                 </ul>
             </div>
