--- a/views/scripts/storage/diff.phtml
+++ b/views/scripts/storage/diff.phtml
@@ -1,5 +1,8 @@
 <div class="row-fluid">
     <div class="span12">
+        <h4 class="cssBoxCenter">
+            <?= $this->translate("resolve differences"); ?>
+        </h4>
         <div class="row-fluid text-left cssBoxCenter">
             <div class="span6">
                 <div class="row-fluid">
