--- a/views/scripts/storage/imports.ajax.phtml
+++ b/views/scripts/storage/imports.ajax.phtml
@@ -1,14 +1,14 @@
-<div class="cssContentMiddle grid_16">
+<div class="cssContentMiddle span12">
     <div class="row-fluid">
-        <div class="span12">
-            <h3>
+        <div class="row-fluid">
+            <h3 class="row-fluid">
                 <?= $this->translate('List of unchecked imported storages') ?>
             </h3>
-            <span class="span12">
+            <span class="row-fluid">
                 <?= $this->translate('Please check the client assignments') ?>
             </span>
         </div>
-        <div class="span12">
+        <div class="row-fluid">
             <?= $this->render('storage/pager.phtml') ?>
 
             <div class="row-fluid cssListing">
